// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Donut chart interactions Should hide callout on mouse leave 1`] = `
<div>
  <div
    class="fui-charts-resp__root"
  >
    <div
      class="fui-donut__root"
    >
      <div
        class="fui-donut__chartWrapper"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <svg
          aria-label="Donut chart example"
          class="fui-donut__chart"
          height="160"
          width="0"
        >
          <g
            transform="translate(0, 80)"
          >
            <g>
              <path
                aria-label="2020/04/30, 20000."
                d="M0.497,-49.747A5,5,0,0,1,6.047,-54.667A55,55,0,0,1,49.18,-24.624A5,5,0,0,1,46.489,-17.713L0,0Z"
                data-is-focusable="true"
                id="_Pie_1first20000"
                role="img"
                style="fill: transparent; cursor: default;"
              />
              <clippath
                id="Arc_clip2#E5E5E5_"
              >
                <path
                  d="M0.497,-49.747A5,5,0,0,1,6.047,-54.667A55,55,0,0,1,49.18,-24.624A5,5,0,0,1,46.489,-17.713L0,0Z"
                />
              </clippath>
              <foreignobject
                clip-path="url(#Arc_clip2#E5E5E5_)"
                height="100%"
                width="100%"
                x="-50%"
                y="-50%"
              >
                <div
                  class="fui-donut-arc__root"
                  style="width: 100%; height: 100%; opacity: 1;"
                />
              </foreignobject>
            </g>
            <g>
              <path
                aria-label="2020/04/20, 39000."
                d="M46.834,-16.78A5,5,0,0,1,53.373,-13.28A55,55,0,0,1,-17.233,52.23A5,5,0,0,1,-20.234,45.449L0,0Z"
                data-is-focusable="true"
                id="_Pie_1second39000"
                role="img"
                style="fill: transparent; cursor: default;"
              />
              <clippath
                id="Arc_clip3#0078D4_"
              >
                <path
                  d="M46.834,-16.78A5,5,0,0,1,53.373,-13.28A55,55,0,0,1,-17.233,52.23A5,5,0,0,1,-20.234,45.449L0,0Z"
                />
              </clippath>
              <foreignobject
                clip-path="url(#Arc_clip3#0078D4_)"
                height="100%"
                width="100%"
                x="-50%"
                y="-50%"
              >
                <div
                  class="fui-donut-arc__root"
                  style="width: 100%; height: 100%; opacity: 1;"
                />
              </foreignobject>
            </g>
            <g>
              <path
                aria-label="2020/04/25, 45000."
                d="M-21.139,45.035A5,5,0,0,1,-28.232,47.201A55,55,0,0,1,-6.047,-54.667A5,5,0,0,1,-0.497,-49.747L0,0Z"
                data-is-focusable="true"
                id="_Pie_1third45000"
                role="img"
                style="fill: transparent; cursor: default;"
              />
              <clippath
                id="Arc_clip4#DADADA_"
              >
                <path
                  d="M-21.139,45.035A5,5,0,0,1,-28.232,47.201A55,55,0,0,1,-6.047,-54.667A5,5,0,0,1,-0.497,-49.747L0,0Z"
                />
              </clippath>
              <foreignobject
                clip-path="url(#Arc_clip4#DADADA_)"
                height="100%"
                width="100%"
                x="-50%"
                y="-50%"
              >
                <div
                  class="fui-donut-arc__root"
                  style="width: 100%; height: 100%; opacity: 1;"
                />
              </foreignobject>
            </g>
          </g>
        </svg>
      </div>
      <div
        id="callout2"
      />
      <div
        class="fui-donut__legendContainer"
      >
        <div
          aria-label="Legends"
          aria-multiselectable="false"
          class="fui-legend__root"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
          role="listbox"
          style="justify-content: center; flex-wrap: wrap;"
        >
          <div
            class="fui-Overflow fui-legend__resizableArea"
          >
            <button
              aria-label="first"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5;"
              />
              <div
                class="fui-legend__text"
              >
                first
              </div>
            </button>
            <button
              aria-label="second"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4;"
              />
              <div
                class="fui-legend__text"
              >
                second
              </div>
            </button>
            <button
              aria-label="third"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada;"
              />
              <div
                class="fui-legend__text"
              >
                third
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Donut chart interactions Should reflect theme change 1`] = `
<div>
  <div
    class="fui-FluentProvider fui-FluentProvider32"
    dir="ltr"
  >
    <div
      class="fui-charts-resp__root"
    >
      <div
        class="fui-donut__root"
      >
        <div
          class="fui-donut__chartWrapper"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <svg
            aria-label="Donut chart example"
            class="fui-donut__chart"
            height="160"
            width="0"
          >
            <g
              transform="translate(0, 80)"
            >
              <g>
                <path
                  aria-label="2020/04/30, 20000."
                  d="M0.497,-49.747A5,5,0,0,1,6.047,-54.667A55,55,0,0,1,49.18,-24.624A5,5,0,0,1,46.489,-17.713L0,0Z"
                  data-is-focusable="true"
                  id="_Pie_33first20000"
                  opacity="1"
                  role="img"
                  style="fill: transparent; cursor: default;"
                />
                <clippath
                  id="Arc_clip61#E5E5E5_"
                >
                  <path
                    d="M0.497,-49.747A5,5,0,0,1,6.047,-54.667A55,55,0,0,1,49.18,-24.624A5,5,0,0,1,46.489,-17.713L0,0Z"
                  />
                </clippath>
                <foreignobject
                  clip-path="url(#Arc_clip61#E5E5E5_)"
                  height="100%"
                  width="100%"
                  x="-50%"
                  y="-50%"
                >
                  <div
                    class="fui-donut-arc__root"
                    style="width: 100%; height: 100%; opacity: 1;"
                  />
                </foreignobject>
              </g>
              <g>
                <path
                  aria-label="2020/04/20, 39000."
                  d="M46.834,-16.78A5,5,0,0,1,53.373,-13.28A55,55,0,0,1,-17.233,52.23A5,5,0,0,1,-20.234,45.449L0,0Z"
                  data-is-focusable="true"
                  id="_Pie_33second39000"
                  opacity="1"
                  role="img"
                  style="fill: transparent; cursor: default;"
                />
                <clippath
                  id="Arc_clip62#0078D4_"
                >
                  <path
                    d="M46.834,-16.78A5,5,0,0,1,53.373,-13.28A55,55,0,0,1,-17.233,52.23A5,5,0,0,1,-20.234,45.449L0,0Z"
                  />
                </clippath>
                <foreignobject
                  clip-path="url(#Arc_clip62#0078D4_)"
                  height="100%"
                  width="100%"
                  x="-50%"
                  y="-50%"
                >
                  <div
                    class="fui-donut-arc__root"
                    style="width: 100%; height: 100%; opacity: 1;"
                  />
                </foreignobject>
              </g>
              <g>
                <path
                  aria-label="2020/04/25, 45000."
                  d="M-21.139,45.035A5,5,0,0,1,-28.232,47.201A55,55,0,0,1,-6.047,-54.667A5,5,0,0,1,-0.497,-49.747L0,0Z"
                  data-is-focusable="true"
                  id="_Pie_33third45000"
                  opacity="1"
                  role="img"
                  style="fill: transparent; cursor: default;"
                />
                <clippath
                  id="Arc_clip63#DADADA_"
                >
                  <path
                    d="M-21.139,45.035A5,5,0,0,1,-28.232,47.201A55,55,0,0,1,-6.047,-54.667A5,5,0,0,1,-0.497,-49.747L0,0Z"
                  />
                </clippath>
                <foreignobject
                  clip-path="url(#Arc_clip63#DADADA_)"
                  height="100%"
                  width="100%"
                  x="-50%"
                  y="-50%"
                >
                  <div
                    class="fui-donut-arc__root"
                    style="width: 100%; height: 100%; opacity: 1;"
                  />
                </foreignobject>
              </g>
            </g>
          </svg>
        </div>
        <div
          id="callout34"
        />
        <div
          class="fui-donut__legendContainer"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="false"
            class="fui-legend__root"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
            style="justify-content: center; flex-wrap: wrap;"
          >
            <div
              class="fui-Overflow fui-legend__resizableArea"
            >
              <button
                aria-label="first"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5;"
                />
                <div
                  class="fui-legend__text"
                >
                  first
                </div>
              </button>
              <button
                aria-label="second"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4;"
                />
                <div
                  class="fui-legend__text"
                >
                  second
                </div>
              </button>
              <button
                aria-label="third"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada;"
                />
                <div
                  class="fui-legend__text"
                >
                  third
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
